// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationDrawer renders empty state 1`] = `
<DocumentFragment>
  <div
    class="c-notification-drawer"
  >
    <div
      class="c-view-header"
    >
      <h2
        class="c-view-header__title"
      >
        Notifications
      </h2>
      <button
        aria-label="Close"
        class="c-close-button c-close-button--x-large c-close-button--light"
      >
        <span
          aria-hidden="true"
          aria-label=""
          role="img"
        >
          <svg />
        </span>
      </button>
    </div>
    <div
      class="c-notification-drawer__content"
    >
      <p>
        You have no notifications currently.
      </p>
      <p>
        Here you'll be notified about events like accidents and ghost vehicles on any bus routes you have selected on the Route Ladders page.
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NotificationDrawer renders notifications 1`] = `
<DocumentFragment>
  <div
    class="c-notification-drawer"
  >
    <div
      class="c-view-header"
    >
      <h2
        class="c-view-header__title"
      >
        Notifications
      </h2>
      <button
        aria-label="Close"
        class="c-close-button c-close-button--x-large c-close-button--light"
      >
        <span
          aria-hidden="true"
          aria-label=""
          role="img"
        >
          <svg />
        </span>
      </button>
    </div>
    <div
      class="c-notification-drawer__content"
    >
      <div
        class="c-notification-drawer__cards"
      >
        <div
          class="c-notification-drawer__header"
        >
          <span
            class="c-notification-drawer__n-unread"
          >
            1 new
          </span>
          <button
            class="c-notification-drawer__mark-all-read-button"
          >
            Mark all as read
          </button>
        </div>
        <ul>
          <li>
            <div
              aria-labelledby="card-label-:r0:"
              class="c-card c-card--kiwi"
            >
              <button
                class="c-card__left"
              >
                <div
                  class="c-card__left-content"
                >
                  <div
                    class="c-card__top-row"
                  >
                    <div
                      class="c-card__title"
                      id="card-label-:r0:"
                    >
                      <span>
                        <svg />
                      </span>
                      No Operator
                    </div>
                    <div
                      class="c-card__time"
                    >
                      0 min
                    </div>
                  </div>
                  <div
                    class="c-card__contents"
                  >
                    <div
                      class="c-card__body"
                    >
                      OCC reported that an operator is not available on the r1, r2.
                    </div>
                    <div
                      class="c-properties-list"
                    >
                      <table
                        class="c-properties-list__table"
                      >
                        <tbody>
                          <tr
                            class="c-properties-list__property "
                          >
                            <td
                              class="c-properties-list__property-label"
                            >
                              Run
                            </td>
                            <td
                              class="c-properties-list__property-value"
                            >
                              run1, run2
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </button>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
